fix map overflow

--- a/app/static/index.css
+++ b/app/static/index.css
@@ -252,6 +252,9 @@ grid inspired from https://www.w3schools.com/css/css_grid_item.asp
     padding: 20px 0;
     font-size: 17px;
     font-weight: bold;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 /*
 map on vendor application page
@@ -300,6 +303,7 @@ map on vendor application page
     background-color: white;
     transform: scale(2);
     font-size: 10px;
+    transition-duration: 0.5s;
     cursor: pointer;
 }
 
